kubernetes-networks/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: homework
spec:
  selector:
    app: nginx # This matches the labels from the Deployment
  ports:
    - protocol: TCP
      port: 80 # Port the service exposes
      targetPort: 8000 # Port the containers are listening on
  type: ClusterIP # Default type
